# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mefistotools"
version = "1.0.0"
description = "Python package for streamlining multiomics analysis with MEFISTO"
readme = "README.md"
authors = [{ name = "Daniel Malzl", email = "daniel@menchelab.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ['bioinformatics', 'proteomics', 'MEFISTO', 'multiomics', 'MOFA']
dependencies = [
    'anndata>=0.8.0',
    'matplotlib>=3.5.2',
    'mofapy2>=0.6.4',
    'mofax>=0.3.6',
    'mudata>=0.2.0',
    'muon>=0.1.2',
    'pandas>=1.4.3',
    'scanpy>=1.9.1',
    'seaborn>=0.11.2',
    'statsmodels>=0.13.2'
]

requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/menchelab/mefistotools"
